<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		login
	 *	@date 		Thursday 03rd of August 2023 04:30:33 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/login" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_login_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__home_page_ek2"
					android:background="@drawable/_bg__home_page_ek2_shape"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="450dp"
					android:layout_height="751dp" />

				<TextView android:id="@+id/login_ek3"
					android:textSize="32sp"
					android:textColor="@color/login_ek3_color"
					android:layout_marginLeft="172dp"
					android:layout_marginTop="267dp"
					android:layout_width="114dp"
					android:layout_height="63dp"
					android:text="@string/login_ek3_string"
					 />

				<View   android:id="@+id/rectangle_1"
					android:background="@drawable/rectangle_1_shape"
					 android:layout_marginStart="66dp"
					android:layout_marginTop="384dp"
					android:layout_width="274dp"
					android:layout_height="45dp" />

				<TextView android:id="@+id/email"
					android:textSize="16sp"
					android:textColor="@color/email_color"
					android:layout_marginLeft="75dp"
					android:layout_marginTop="392dp"
					android:layout_width="60dp"
					android:layout_height="31dp"
					android:text="@string/email_string"
					 />

				<View   android:id="@+id/rectangle_2"
					android:background="@drawable/rectangle_2_shape"
					 android:layout_marginStart="66dp"
					android:layout_marginTop="456dp"
					android:layout_width="274dp"
					android:layout_height="45dp" />

				<TextView android:id="@+id/password"
					android:textSize="16sp"
					android:textColor="@color/password_color"
					android:layout_marginLeft="75dp"
					android:layout_marginTop="468dp"
					android:layout_width="87dp"
					android:layout_height="31dp"
					android:text="@string/password_string"
					 />

				<View   android:id="@+id/rectangle_3"
					android:background="@drawable/rectangle_3_shape"
					 android:alpha="0.87999999523163"
					 android:layout_marginStart="99dp"
					android:layout_marginTop="552dp"
					android:layout_width="192dp"
					android:layout_height="46dp" />

				<TextView android:id="@+id/login_now"
					android:textSize="24sp"
					android:textColor="@color/login_now_color"
					android:layout_marginLeft="142dp"
					android:layout_marginTop="560dp"
					android:layout_width="137dp"
					android:layout_height="48dp"
					android:text="@string/login_now_string"
					 />

				<TextView android:id="@+id/don_t_have_an_account_signup"
					android:textSize="16sp"
					android:textColor="@color/login_ek3_color"
					android:layout_marginLeft="81dp"
					android:layout_marginTop="605dp"
					android:layout_width="227dp"
					android:layout_height="31dp"
					android:text="@string/don_t_have_an_account_signup_string"
					 />

				<TextView android:id="@+id/forget_password"
					android:textSize="16sp"
					android:textColor="@color/login_now_color"
					android:layout_marginLeft="200dp"
					android:layout_marginTop="503dp"
					android:layout_width="134dp"
					android:layout_height="31dp"
					android:text="@string/forget_password_string"
					 />

				<ImageView android:id="@+id/pngtree_keep_our_city_clean_png_png_image_6099580_1"
					android:src="@drawable/pngtree_keep_our_city_clean_png_png_image_6099580_1"
					android:contentDescription="pngtree_keep_our_city_clean_png_png_image_6099580_1"
					 android:layout_marginStart="136dp"
					android:layout_marginTop="98dp"
					android:layout_width="154dp"
					android:layout_height="154dp" />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>