<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		scrap_rates
	 *	@date 		Saturday 05th of August 2023 11:28:54 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/scrap_rates" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_scrap_rates_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__scrap_rates_ek2"
					android:background="@drawable/_bg__scrap_rates_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="450dp"
					android:layout_height="751dp" />

				<ImageView android:id="@+id/arrow_1"
					android:src="@drawable/arrow_1"
					android:contentDescription="arrow_1"
					 android:layout_marginStart="20dp"
					android:layout_marginTop="10dp"
					android:layout_width="28dp"
					android:layout_height="38dp" />

				<View   android:id="@+id/rectangle_7"
					android:background="@drawable/rectangle_7_shape"
					android:layout_marginStart="-16dp"
					android:layout_marginTop="50dp"
					android:layout_width="480dp"
					android:layout_height="630dp" />

				<TextView android:id="@+id/cardboard"
					android:textSize="20sp"
					android:textColor="@color/cardboard_color"
					android:layout_marginLeft="131dp"
					android:layout_marginTop="314dp"
					android:layout_width="115dp"
					android:layout_height="40dp"
					android:text="@string/cardboard_string"
					 />

				<ImageView android:id="@+id/images_removebg_preview_1"
					android:src="@drawable/images_removebg_preview_1"
					android:contentDescription="images_removebg_preview_1"
					 android:layout_marginStart="354dp"
					android:layout_marginTop="6dp"
					android:layout_width="40dp"
					android:layout_height="40dp" />

				<ImageView android:id="@+id/home_outline_removebg_preview_1"
					android:src="@drawable/home_outline_removebg_preview_1"
					android:contentDescription="home_outline_removebg_preview_1"
					android:layout_marginStart="9dp"
					android:layout_marginTop="685dp"
					android:layout_width="40dp"
					android:layout_height="40dp" />

				<ImageView android:id="@+id/settings_2_outline_removebg_preview_1"
					android:src="@drawable/settings_2_outline_removebg_preview_1"
					android:contentDescription="settings_2_outline_removebg_preview_1"
					android:layout_marginStart="357dp"
					android:layout_marginTop="685dp"
					android:layout_width="40dp"
					android:layout_height="40dp" />

				<View   android:id="@+id/ellipse_2"
					android:background="@drawable/ellipse_2_shape"
					android:layout_marginStart="170dp"
					android:layout_marginTop="645dp"
					android:layout_width="68dp"
					android:layout_height="66dp" />

				<ImageView android:id="@+id/people_outline_removebg_preview_1"
					android:src="@drawable/people_outline_removebg_preview_1"
					android:contentDescription="people_outline_removebg_preview_1"
					android:layout_marginStart="180dp"
					android:layout_marginTop="650dp"
					android:layout_width="50dp"
					android:layout_height="50dp" />

				<ImageView android:id="@+id/search_outline_removebg_preview_1"
					android:src="@drawable/search_outline_removebg_preview_1"
					android:contentDescription="search_outline_removebg_preview_1"
					android:layout_marginStart="99dp"
					android:layout_marginTop="685dp"
					android:layout_width="40dp"
					android:layout_height="40dp" />

				<ImageView android:id="@+id/grid_outline_removebg_preview_1"
					android:src="@drawable/grid_outline_removebg_preview_1"
					android:contentDescription="grid_outline_removebg_preview_1"
					android:layout_marginStart="280dp"
					android:layout_marginTop="685dp"
					android:layout_width="40dp"
					android:layout_height="40dp" />

				<TextView android:id="@+id/scrap_rates_ek3"
					android:textSize="32sp"
					android:textColor="@color/rectangle_7_color"
					android:layout_marginLeft="110dp"
					android:layout_marginTop="6dp"
					android:layout_width="197dp"
					android:layout_height="63dp"
					android:text="@string/scrap_rates_ek3_string"
					 />

				<ImageView android:id="@+id/_605594_removebg_preview_1"
					android:src="@drawable/_605594_removebg_preview_1"
					android:contentDescription="_605594_removebg_preview_1"
					 android:layout_marginStart="26dp"
					android:layout_marginTop="89dp"
					android:layout_width="60dp"
					android:layout_height="60dp" />

				<ImageView android:id="@+id/_1000_f_332600402_jqpcm8s5auhoyz6keovutu8uojq0h9dr_removebg_preview_1"
					android:src="@drawable/_1000_f_332600402_jqpcm8s5auhoyz6keovutu8uojq0h9dr_removebg_preview_1"
					android:contentDescription="_1000_f_332600402_jqpcm8s5auhoyz6keovutu8uojq0h9dr_removebg_preview_1"
					 android:layout_marginStart="128dp"
					android:layout_marginTop="74dp"
					android:layout_width="90dp"
					android:layout_height="89.82dp" />

				<ImageView android:id="@+id/imgbin_kettle_lid_pressure_cooker_stock_pots_tableware_kettle_g4l4hjvrz1bhaezra87qqxetr_t_removebg_preview_1"
					android:src="@drawable/imgbin_kettle_lid_pressure_cooker_stock_pots_tableware_kettle_g4l4hjvrz1bhaezra87qqxetr_t_removebg_preview_1"
					android:contentDescription="imgbin_kettle_lid_pressure_cooker_stock_pots_tableware_kettle_g4l4hjvrz1bhaezra87qqxetr_t_removebg_preview_1"
					 android:layout_marginStart="293dp"
					android:layout_marginTop="63dp"
					android:layout_width="100dp"
					android:layout_height="99.35dp" />

				<TextView android:id="@+id/iron"
					android:textSize="20sp"
					android:textColor="@color/cardboard_color"
					android:layout_marginLeft="31dp"
					android:layout_marginTop="161dp"
					android:layout_width="61dp"
					android:layout_height="40dp"
					android:text="@string/iron_string"
					 />

				<TextView android:id="@+id/paper"
					android:textSize="20sp"
					android:textColor="@color/cardboard_color"
					android:layout_marginLeft="146dp"
					android:layout_marginTop="161dp"
					android:layout_width="76dp"
					android:layout_height="40dp"
					android:text="@string/paper_string"
					 />

				<TextView android:id="@+id/aluminium"
					android:textSize="20sp"
					android:textColor="@color/cardboard_color"
					android:layout_marginLeft="249dp"
					android:layout_marginTop="161dp"
					android:layout_width="120dp"
					android:layout_height="40dp"
					android:text="@string/aluminium_string"
					 />

				<ImageView android:id="@+id/padlock_lock_icon_removebg_preview_2"
					android:src="@drawable/padlock_lock_icon_removebg_preview_2"
					android:contentDescription="padlock_lock_icon_removebg_preview_2"
					 android:layout_marginStart="293dp"
					android:layout_marginTop="243dp"
					android:layout_width="70dp"
					android:layout_height="70dp" />

				<TextView android:id="@+id/brass"
					android:textSize="20sp"
					android:textColor="@color/cardboard_color"
					android:layout_marginLeft="278dp"
					android:layout_marginTop="314dp"
					android:layout_width="72dp"
					android:layout_height="40dp"
					android:text="@string/brass_string"
					 />

				<TextView android:id="@+id/copper"
					android:textSize="20sp"
					android:textColor="@color/cardboard_color"
					android:layout_marginLeft="26dp"
					android:layout_marginTop="314dp"
					android:layout_width="87dp"
					android:layout_height="40dp"
					android:text="@string/copper_string"
					 />

				<ImageView android:id="@+id/trash_bin_with_recycle_symbol_on_transparent_background_png_removebg_preview_1"
					android:src="@drawable/trash_bin_with_recycle_symbol_on_transparent_background_png_removebg_preview_1"
					android:contentDescription="trash_bin_with_recycle_symbol_on_transparent_background_png_removebg_preview_1"
					 android:layout_marginStart="293dp"
					android:layout_marginTop="394dp"
					android:layout_width="70dp"
					android:layout_height="70dp" />

				<TextView android:id="@+id/e_waste"
					android:textSize="20sp"
					android:textColor="@color/cardboard_color"
					android:layout_marginLeft="18dp"
					android:layout_marginTop="464dp"
					android:layout_width="96dp"
					android:layout_height="40dp"
					android:text="@string/e_waste_string"
					 />

				<TextView android:id="@+id/note___books"
					android:textSize="20sp"
					android:textColor="@color/cardboard_color"
					android:layout_marginLeft="121dp"
					android:layout_marginTop="464dp"
					android:layout_width="139dp"
					android:layout_height="40dp"
					android:text="@string/note___books_string"
					 />

				<TextView android:id="@+id/plastic"
					android:textSize="20sp"
					android:textColor="@color/cardboard_color"
					android:layout_marginLeft="271dp"
					android:layout_marginTop="464dp"
					android:layout_width="83dp"
					android:layout_height="40dp"
					android:text="@string/plastic_string"
					 />

				<ImageView android:id="@+id/padlock_lock_icon_removebg_preview_1"
					android:src="@drawable/padlock_lock_icon_removebg_preview_1"
					android:contentDescription="padlock_lock_icon_removebg_preview_1"
					 android:layout_marginStart="140dp"
					android:layout_marginTop="247dp"
					android:layout_width="60dp"
					android:layout_height="60dp" />

				<ImageView android:id="@+id/_4897401_removebg_preview_1"
					android:src="@drawable/_4897401_removebg_preview_1"
					android:contentDescription="_4897401_removebg_preview_1"
					 android:layout_marginStart="28dp"
					android:layout_marginTop="245dp"
					android:layout_width="60dp"
					android:layout_height="60dp" />

				<ImageView android:id="@+id/_800_4147300_oailrlcai568vjys507mcdmem4zyqhqzv7ni1jhg_removebg_preview_1"
					android:src="@drawable/_800_4147300_oailrlcai568vjys507mcdmem4zyqhqzv7ni1jhg_removebg_preview_1"
					android:contentDescription="_800_4147300_oailrlcai568vjys507mcdmem4zyqhqzv7ni1jhg_removebg_preview_1"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="389dp"
					android:layout_width="110dp"
					android:layout_height="73.33dp" />

				<ImageView android:id="@+id/png_clipart_four_assorted_books_illustration_pile_of_old_books_objects_book_removebg_preview_1"
					android:src="@drawable/png_clipart_four_assorted_books_illustration_pile_of_old_books_objects_book_removebg_preview_1"
					android:contentDescription="png_clipart_four_assorted_books_illustration_pile_of_old_books_objects_book_removebg_preview_1"
					 android:layout_marginStart="74dp"
					android:layout_marginTop="395dp"
					android:layout_width="200dp"
					android:layout_height="66.51dp" />

				<ImageView android:id="@+id/_137_1372619_automotive_battery_png_image_png_icon_car_battery_removebg_preview_1"
					android:src="@drawable/_137_1372619_automotive_battery_png_image_png_icon_car_battery_removebg_preview_1"
					android:contentDescription="_137_1372619_automotive_battery_png_image_png_icon_car_battery_removebg_preview_1"
					 android:layout_marginStart="22dp"
					android:layout_marginTop="537dp"
					android:layout_width="70dp"
					android:layout_height="70dp" />

				<ImageView android:id="@+id/_1316672048659507570ups_hi_removebg_preview_1"
					android:src="@drawable/_1316672048659507570ups_hi_removebg_preview_1"
					android:contentDescription="_1316672048659507570ups_hi_removebg_preview_1"
					 android:layout_marginStart="151dp"
					android:layout_marginTop="542dp"
					android:layout_width="60dp"
					android:layout_height="60dp" />

				<ImageView android:id="@+id/_188022_removebg_preview_1"
					android:src="@drawable/_188022_removebg_preview_1"
					android:contentDescription="_188022_removebg_preview_1"
					 android:layout_marginStart="293dp"
					android:layout_marginTop="538dp"
					android:layout_width="60dp"
					android:layout_height="60dp" />

				<TextView android:id="@+id/battery"
					android:textSize="20sp"
					android:textColor="@color/cardboard_color"
					android:layout_marginLeft="19dp"
					android:layout_marginTop="606dp"
					android:layout_width="90dp"
					android:layout_height="40dp"
					android:text="@string/battery_string"
					 />

				<TextView android:id="@+id/computer_ups"
					android:textSize="20sp"
					android:textColor="@color/cardboard_color"
					android:layout_marginLeft="115dp"
					android:layout_marginTop="606dp"
					android:layout_width="149dp"
					android:layout_height="40dp"
					android:text="@string/computer_ups_string"
					 />

				<TextView android:id="@+id/ac_1_ton_"
					android:textSize="20sp"
					android:textColor="@color/cardboard_color"
					android:layout_marginLeft="263dp"
					android:layout_marginTop="606dp"
					android:layout_width="103dp"
					android:layout_height="40dp"
					android:text="@string/ac_1_ton__string"
					 />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>